--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "New sale" %>
+<% content_for :title, "GorillaCars" %>
 
-<h1>New sale</h1>
+<h1>Добавить Операцию</h1>
 
 <%= render "form", sale: @sale %>
 
