--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -32,6 +32,11 @@
     <%= form.number_field :year %>
   </div>
 
+  <div class="field">
+    <%= form.label :images, "Загрузить изображения" %>
+    <%= form.file_field :images, multiple: true %> <!-- Позволяет загружать несколько изображений -->
+  </div>
+
   <div class="actions">
     <%= form.submit 'Добавить машину' %>
   </div>
