--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= content_for(:title) || "Gorilla Cars" %></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<html lang="ru">
+<head>
+  <title><%= content_for(:title) || "Gorilla Cars" %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= yield :head %>
+  <%= yield :head %>
 
-    <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
-    <%#= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
+  <link rel="icon" href="/icon.png" type="image/png">
+  <link rel="icon" href="/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/icon.png">
 
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
+  <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+  <%= javascript_importmap_tags %>
+</head>
 
-    <%# Includes all stylesheet files in app/assets/stylesheets %>
-    <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-  </head>
+<body style="background-image: url('<%= asset_path('1.jpg') %>'); background-size: cover; background-position: center center; background-attachment: fixed; background-repeat: no-repeat; min-height: 100vh; color: white; font-family: Arial, sans-serif;">
 
-  <body>
-    <%= yield %>
-  </body>
+<!-- Навигация, которая будет отображаться на всех страницах -->
+<nav>
+  <%= link_to 'Машины', cars_path, class: 'btn-link' %>
+  <%= link_to 'Клиенты', customers_path, class: 'btn-link' %>
+  <%= link_to 'Сотрудники', employees_path, class: 'btn-link' %>
+  <%= link_to 'Продажи', sales_path, class: 'btn-link' %>
+</nav>
+
+<!-- Основное содержимое страницы -->
+<%= yield %> <!-- Контент каждой страницы будет вставлен сюда -->
+
+</body>
 </html>
